--- a/css/style.css
+++ b/css/style.css
@@ -822,7 +822,7 @@ footer {
 }
 
 .popUp {
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
