--- a/scss/style.scss
+++ b/scss/style.scss
@@ -681,7 +681,7 @@ footer{
 
 
 .popUp {
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
