--- a/css/style.css
+++ b/css/style.css
@@ -822,7 +822,7 @@ footer {
 }
 
 .popUp {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -835,7 +835,7 @@ footer {
   text-align: center;
   border-radius: 5px;
   box-shadow: 0px 0px 5px black;
-  transition: all 0.5s ease;
+  transition: all 0.5s ease-in-out;
 }
 .popUp__text {
   margin-bottom: 30px;
