--- a/scss/style.scss
+++ b/scss/style.scss
@@ -681,7 +681,7 @@ footer{
 
 
 .popUp {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
@@ -694,7 +694,7 @@ footer{
     text-align: center;
     border-radius: 5px;
     box-shadow: 0px 0px 5px black;
-    transition: all 0.5s ease;
+    transition: all 0.5s ease-in-out;
 
     &__text {
         margin-bottom: 30px;
