--- a/css/nullstyle.css
+++ b/css/nullstyle.css
@@ -64,7 +64,12 @@ img {
   vertical-align: top;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
+  opacity: 0;
+  font-size: 0.1px;
+}
+
+h2, h3, h4, h5, h6 {
   font-size: inherit;
   font-weight: inherit;
 }
