--- a/scss/nullstyle.scss
+++ b/scss/nullstyle.scss
@@ -12,4 +12,8 @@ a,a:visited{text-decoration: none;}
 a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
+h1{
+    opacity: 0;
+    font-size: 0.1px;
+}
+h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
