--- a/css/iconsfont.css
+++ b/css/iconsfont.css
@@ -1,54 +1,55 @@
 @font-face {
-  font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?ivzki0');
-  src:  url('../fonts/icomoon.eot?ivzki0#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?ivzki0') format('truetype'),
-    url('../fonts/icomoon.woff?ivzki0') format('woff'),
-    url('../fonts/icomoon.svg?ivzki0#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
+    font-family: 'icomoon';
+    src: url('../fonts/icomoon.eot?ivzki0');
+    src: url('../fonts/icomoon.eot?ivzki0#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?ivzki0') format('truetype'),
+        url('../fonts/icomoon.woff?ivzki0') format('woff'),
+        url('../fonts/icomoon.svg?ivzki0#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
 }
 
-[class^="_icon-"]::before, [class*=" _icon-"]::before {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  
-  
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+[class^='_icon-']::before,
+[class*=' _icon-']::before {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
 
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
 
 @media (max-width: 767px) {
-  [class^="_icon-"]::before, [class*=" _icon-"]::before{
-    font-size: calc(25px + 3.4 * ((100vw - 320px) / 1280));
-  }
+    [class^='_icon-']::before,
+    [class*=' _icon-']::before {
+        font-size: calc(25px + 3.4 * ((100vw - 320px) / 1280));
+    }
 }
 @media (min-width: 767px) {
-  [class^="_icon-"]::before, [class*=" _icon-"]::before {
-    font-size: calc(30px + 3.4 * (100vw / 1280));
-  }
+    [class^='_icon-']::before,
+    [class*=' _icon-']::before {
+        font-size: calc(30px + 3.4 * (100vw / 1280));
+    }
 }
 
 ._icon-instagram:before {
-  content: "\e900";
+    content: '\e900';
 }
 ._icon-phone:before {
-  content: "\e901";
+    content: '\e901';
 }
 ._icon-telegram:before {
-  content: "\e902";
+    content: '\e902';
 }
 ._icon-viber:before {
-  content: "\e903";
+    content: '\e903';
 }
 ._icon-vk:before {
-  content: "\e904";
+    content: '\e904';
 }
