--- a/scss/style.scss
+++ b/scss/style.scss
@@ -652,7 +652,7 @@ footer {
 }
 @media (max-width: 767px) {
     .foco {
-        display: none;
+        display: block;
     }
     .foot__title {
         display: none;
@@ -664,7 +664,17 @@ footer {
         text-align: center;
     }
 }
+
+.left__column {
+    order: 1;
+}
+@media (max-width: 767px) {
+    .left__column {
+        order: 1;
+    }
+}
 .middle {
+    order: 2;
     flex: 1 0 50%;
     display: flex;
     justify-content: center;
@@ -687,6 +697,7 @@ footer {
     }
 }
 .right {
+    order: 3;
     flex: 0 1 25%;
     display: flex;
     flex-direction: column;
@@ -694,6 +705,11 @@ footer {
     &__list {
         text-align: right;
         padding-left: 0px;
+    }
+}
+@media (max-width: 767px) {
+    .right {
+        order: 3;
     }
 }
 .a_adress {
