--- a/scss/style.scss
+++ b/scss/style.scss
@@ -131,6 +131,7 @@ textarea {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    margin-bottom: 30px;
 
     .full-screen__body {
         padding: 50px 10px;
@@ -142,6 +143,18 @@ textarea {
         align-items: center;
         flex: 1;
         flex-direction: column;
+        &::before {
+            content: '';
+            background-image: url('../img/kamila.webp');
+            position: absolute;
+            background-size: cover;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0.3;
+            z-index: -1;
+        }
     }
     .full-screen__title {
         padding: 0 10px;
