--- a/css/style.css
+++ b/css/style.css
@@ -129,8 +129,10 @@ textarea {
 }
 .full-screen__body::before {
   content: "";
-  background-image: url("../img/kamila.webp");
+  background-image: url("../img/mountains.webp");
+  background-position: 0 0;
   position: absolute;
+  background-repeat: no-repeat;
   background-size: cover;
   top: 0px;
   left: 0;
@@ -138,6 +140,11 @@ textarea {
   height: 100%;
   opacity: 0.3;
   z-index: -1;
+}
+@media (max-width: 769px) {
+  .full-screen__body::before {
+    background-image: url("../img/kamilainmoscow.webp");
+  }
 }
 .full-screen__title {
   padding: 0 10px;
@@ -193,15 +200,6 @@ textarea {
             55px + 76.5 * (100vw / 1280)
         );
   }
-}
-.full-screen .full-screen__photo {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 .full-screen__link {
   text-decoration: none;
