--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 $marginMobile: 0px 0px 30px 0px;
 $redColor: #4e0e1f;
 $heightPrice: 400px;
-
+$topPositionOfBackground: 0px;
 $maxWidth: 1280;
 @mixin adaptiv-font($pcSize, $mobSize) {
     $addSize: $pcSize - $mobSize;
@@ -131,7 +131,7 @@ textarea {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    margin-bottom: 30px;
+    margin-bottom: 30px + $topPositionOfBackground;
 
     &__body {
         padding: 50px 10px;
@@ -145,10 +145,12 @@ textarea {
         flex-direction: column;
         &::before {
             content: '';
-            background-image: url('../img/kamila.webp');
+            background-image: url('../img/mountains.webp');
+            background-position: 0 0;
             position: absolute;
+            background-repeat: no-repeat;
             background-size: cover;
-            top: 0px;
+            top: $topPositionOfBackground;
             left: 0;
             width: 100%;
             height: 100%;
@@ -156,15 +158,14 @@ textarea {
             z-index: -1;
         }
     }
-    // @media (max-width: 767px) {
-    //     &__body {
-    //         &::before {
-    //             margin-top: 0px;
-    //             top: 0px;
-    //             left: 0px;
-    //         }
-    //     }
-    // }
+
+    @media (max-width: 769px) {
+        &__body {
+            &::before {
+                background-image: url('../img/kamilainmoscow.webp');
+            }
+        }
+    }
     &__title {
         padding: 0 10px;
         text-align: center;
@@ -180,14 +181,6 @@ textarea {
         @include adaptiv-font(100, 55);
         letter-spacing: 10px;
         margin-bottom: 30px;
-    }
-    .full-screen__photo {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
     }
     &__link {
         text-decoration: none;
