--- a/scss/style.scss
+++ b/scss/style.scss
@@ -401,6 +401,9 @@ textarea {
         margin: 0px 0px 10px 0px;
     }
     &__item-label {
+        &:hover {
+            font-weight: bold;
+        }
         padding-right: 3px;
     }
 }
@@ -595,7 +598,6 @@ textarea {
     }
     &__buttom {
         opacity: 1;
-        max-width: 100px;
         padding: 5px 15px;
         margin: 0 auto;
         background: none;
@@ -866,12 +868,12 @@ body._touch .menu__list > li._active .menu__sub-list {
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: #121212;
+    background-color: rgb(18, 18, 18, 0.7);
     padding: 15px;
     min-width: 200px;
     display: flex;
     gap: 15px;
-
+    border-radius: 6px;
     justify-content: center;
 }
 .menu__sub-list li {
