--- a/scss/style.scss
+++ b/scss/style.scss
@@ -820,14 +820,7 @@ header {
     justify-content: flex-end;
     min-height: 70px;
 }
-.header__logo {
-    border-radius: 50%;
-    background-color: #fff;
-    position: relative;
-    width: 50px;
-    height: 50px;
-    z-index: 5;
-}
+
 .header__menu {
 }
 .menu {
@@ -955,7 +948,7 @@ body._touch .menu__list > li._active .menu__sub-list {
         top: 0;
         left: 0;
         height: 70px;
-        background-color: rgb(18, 18, 18);
+        // background-color: rgb(18, 18, 18);
         z-index: 2;
     }
     .menu__list > li {
