--- a/scss/style.scss
+++ b/scss/style.scss
@@ -106,6 +106,23 @@ body {
     background: #121212;
     position: relative;
 }
+.body__content {
+    display: block;
+}
+.body__loader {
+    display: block;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 15;
+    object-fit: cover;
+    width: 60px;
+
+    img {
+        width: 100%;
+    }
+}
 body._lock {
     overflow: hidden;
 }
@@ -628,7 +645,7 @@ textarea {
 //===========================
 footer {
     margin-top: 20px;
-    background-color: #4e0e1f;
+    background-color: $redColor;
     padding: 20px;
     width: 100%;
 }
