--- a/css/style.css
+++ b/css/style.css
@@ -1160,10 +1160,12 @@ body._touch .menu__list > li._active .menu__sub-list {
 .menu__link {
   color: #fff;
   font-size: 18px;
+  letter-spacing: 1px;
 }
 
 .menu__link:hover {
   text-decoration: underline;
+  font-weight: 500;
 }
 
 .menu__arrow {
