--- a/scss/style.scss
+++ b/scss/style.scss
@@ -609,6 +609,7 @@ textarea {
     &__item {
         padding: 5px;
         opacity: 0.5;
+        // text-align: center;
         &:focus {
             opacity: 1;
         }
@@ -872,9 +873,11 @@ body._touch .menu__list > li._active .menu__sub-list {
 .menu__link {
     color: #fff;
     font-size: 18px;
+    letter-spacing: 1px;
 }
 .menu__link:hover {
     text-decoration: underline;
+    font-weight: 500;
 }
 .menu__arrow {
     display: none;
