--- a/css/style.css
+++ b/css/style.css
@@ -69,14 +69,8 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: inherit;
 }
 
-@font-face {
-  font-family: "Bang";
-  src: url("../fonts/Black.Angel.Demo.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal;
-}
 html {
-  font-family: Gilroy, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   color: #fff;
   scroll-behavior: smooth;
 }
@@ -136,34 +130,15 @@ textarea {
   margin-bottom: 30px;
 }
 .full-screen__body {
-  padding: 50px 10px;
-  background: #121212;
-  position: relative;
-  z-index: 2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex: 1;
-  flex-direction: column;
-}
-.full-screen__body::before {
-  content: "";
-  background-image: url("../img/mountains.webp");
-  background-position: 0 0;
   position: absolute;
-  background-repeat: no-repeat;
-  background-size: cover;
-  top: 0px;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.3;
-  z-index: -1;
-}
-@media (max-width: 769px) {
-  .full-screen__body::before {
-    background-image: url("../img/kamilainmoscow.webp");
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .full-screen__title {
   padding: 0 10px;
@@ -200,26 +175,6 @@ textarea {
         );
   }
 }
-.full-screen__text {
-  font-family: "Bang", "Helvetica Neue", Helvetica, sans-serif;
-  text-align: center;
-  letter-spacing: 10px;
-  margin-bottom: 30px;
-}
-@media (max-width: 767px) {
-  .full-screen__text {
-    font-size: calc(
-            55px + 76.5 * ((100vw - 320px) / 1280)
-        );
-  }
-}
-@media (min-width: 767px) {
-  .full-screen__text {
-    font-size: calc(
-            55px + 76.5 * (100vw / 1280)
-        );
-  }
-}
 .full-screen__link {
   text-decoration: none;
   padding-bottom: 3px;
@@ -228,6 +183,16 @@ textarea {
 }
 .full-screen__link a {
   color: #fff;
+}
+.full-screen__video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: -1;
 }
 
 .container {
