--- a/scss/style.scss
+++ b/scss/style.scss
@@ -90,15 +90,8 @@ $maxWidth: 1280;
     }
 }
 
-@font-face {
-    font-family: "Bang";
-    src: url("../fonts/Black.Angel.Demo.ttf") format("truetype");
-    font-style: normal;
-    font-weight: normal;
-}
-
 html {
-    font-family: Gilroy, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: #fff;
     scroll-behavior: smooth;
 }
@@ -151,38 +144,38 @@ textarea {
     margin-bottom: 30px + $topPositionOfBackground;
 
     &__body {
-        padding: 50px 10px;
-        background: #121212;
-        position: relative;
-        z-index: 2;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        flex: 1;
-        flex-direction: column;
-        &::before {
-            content: "";
-            background-image: url("../img/mountains.webp");
-            background-position: 0 0;
-            position: absolute;
-            background-repeat: no-repeat;
-            background-size: cover;
-            top: $topPositionOfBackground;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            opacity: 0.3;
-            z-index: -1;
-        }
+        // &::before {
+        //     content: "";
+        //     background-image: url("../img/mountains.webp");
+        //     background-position: 0 0;
+        //     position: absolute;
+        //     background-repeat: no-repeat;
+        //     background-size: cover;
+        //     top: $topPositionOfBackground;
+        //     left: 0;
+        //     width: 100%;
+        //     height: 100%;
+        //     opacity: 0.3;
+        //     z-index: -1;
+        // }
     }
 
-    @media (max-width: 769px) {
-        &__body {
-            &::before {
-                background-image: url("../img/kamilainmoscow.webp");
-            }
-        }
-    }
+    // @media (max-width: 769px) {
+    //     &__body {
+    //         &::before {
+    //             background-image: url("../img/kamilainmoscow.webp");
+    //         }
+    //     }
+    // }
     &__title {
         padding: 0 10px;
         text-align: center;
@@ -190,13 +183,6 @@ textarea {
         @include adaptiv-font(60, 28);
         @include adaptiv-letter-space(12, 5);
         font-weight: 700;
-        margin-bottom: 30px;
-    }
-    &__text {
-        font-family: "Bang", "Helvetica Neue", Helvetica, sans-serif;
-        text-align: center;
-        @include adaptiv-font(100, 55);
-        letter-spacing: 10px;
         margin-bottom: 30px;
     }
     &__link {
@@ -207,6 +193,15 @@ textarea {
         a {
             color: #fff;
         }
+    }
+    &__video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -1;
     }
 }
 
