--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,25 @@ textarea {
   justify-content: center;
   align-items: center;
 }
+.full-screen__body::before {
+  content: "";
+  background-image: url("../img/mountains.webp");
+  background-position: 0 0;
+  position: absolute;
+  background-repeat: no-repeat;
+  background-size: cover;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  z-index: -1;
+}
+@media (max-width: 767px) {
+  .full-screen__body::before {
+    content: none;
+  }
+}
 .full-screen__title {
   padding: 0 10px;
   text-align: center;
@@ -185,6 +204,7 @@ textarea {
   color: #fff;
 }
 .full-screen__video {
+  display: none;
   position: absolute;
   top: 0;
   left: 0;
@@ -193,6 +213,11 @@ textarea {
   -o-object-fit: cover;
      object-fit: cover;
   z-index: -1;
+}
+@media (max-width: 767px) {
+  .full-screen__video {
+    display: block;
+  }
 }
 
 .container {
