--- a/scss/style.scss
+++ b/scss/style.scss
@@ -805,6 +805,8 @@ footer {
     text-align: center;
     border-radius: 5px;
     box-shadow: 0px 0px 5px black;
+    z-index: 10;
+    max-width: 300px;
     &__text {
         margin-bottom: 30px;
         @include adaptiv-font(18, 12);
