--- a/scss/style.scss
+++ b/scss/style.scss
@@ -153,28 +153,28 @@ textarea {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        &::before {
-            content: "";
-            background-image: url("../img/mountains.webp");
-            background-position: 0 0;
-            position: absolute;
-            background-repeat: no-repeat;
-            background-size: cover;
-            top: $topPositionOfBackground;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            opacity: 0.3;
-            z-index: -1;
-        }
+        // &::before {
+        //     content: "";
+        //     background-image: url("../img/mountains.webp");
+        //     background-position: 0 0;
+        //     position: absolute;
+        //     background-repeat: no-repeat;
+        //     background-size: cover;
+        //     top: $topPositionOfBackground;
+        //     left: 0;
+        //     width: 100%;
+        //     height: 100%;
+        //     opacity: 0.3;
+        //     z-index: -1;
+        // }
     }
-    @media (max-width: 767px) {
-        &__body {
-            &::before {
-                content: none;
-            }
-        }
-    }
+    // @media (max-width: 767px) {
+    //     &__body {
+    //         &::before {
+    //             content: none;
+    //         }
+    //     }
+    // }
     &__title {
         padding: 0 10px;
         text-align: center;
@@ -194,7 +194,7 @@ textarea {
         }
     }
     &__video {
-        display: none;
+        display: block;
         position: absolute;
         top: 0;
         left: 0;
@@ -203,11 +203,11 @@ textarea {
         object-fit: cover;
         z-index: -1;
     }
-    @media (max-width: 767px) {
-        &__video {
-            display: block;
-        }
-    }
+    // @media (max-width: 767px) {
+    //     &__video {
+    //         display: block;
+    //     }
+    // }
 }
 //==========================================================================================================================
 .container {
