--- a/css/style.css
+++ b/css/style.css
@@ -1029,7 +1029,6 @@ footer {
   transform: translate(-50%, -50%);
   top: 50%;
   margin: 0 auto;
-  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -1309,4 +1308,43 @@ body._touch .menu__list > li._active .menu__sub-list {
   .iztf {
     display: block;
   }
+}
+.question {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 300px;
+  background-color: rgb(0, 0, 0);
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10px 15px;
+  z-index: 100;
+  border-radius: 5px;
+  font-size: 20px;
+}
+.question .qusetion__text {
+  margin-bottom: 20px;
+  text-align: center;
+}
+.question .question__btn {
+  font-size: 16px;
+  padding: 5px 10px;
+  background: none;
+  color: white;
+  border: 1px solid white;
+  letter-spacing: 1px;
+  transition: all 0.3s ease-in;
+  border-radius: 5px;
+}
+.question .question__btn:hover {
+  background: #b7b7b7;
+  color: #121212;
+}
+.question .question__btn:active {
+  background: #fff;
+  color: #121212;
 }
