--- a/scss/style.scss
+++ b/scss/style.scss
@@ -796,7 +796,6 @@ footer {
     transform: translate(-50%, -50%);
     top: 50%;
     margin: 0 auto;
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -807,6 +806,7 @@ footer {
     box-shadow: 0px 0px 5px black;
     z-index: 10;
     max-width: 300px;
+
     &__text {
         margin-bottom: 30px;
         @include adaptiv-font(18, 12);
@@ -1029,5 +1029,44 @@ body._touch .menu__list > li._active .menu__sub-list {
 @media (max-width: 806px) {
     .iztf {
         display: block;
+    }
+}
+.question {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 300px;
+    background-color: rgb(0, 0, 0);
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px 15px;
+    z-index: 100;
+    border-radius: 5px;
+    font-size: 20px;
+    .qusetion__text {
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .question__btn {
+        font-size: 16px;
+        padding: 5px 10px;
+        background: none;
+        color: white;
+        border: 1px solid white;
+        letter-spacing: 1px;
+        transition: all 0.3s ease-in;
+        border-radius: 5px;
+        &:hover {
+            background: #b7b7b7;
+            color: #121212;
+        }
+        &:active {
+            background: #fff;
+            color: #121212;
+        }
     }
 }
